syntax = "proto3";

option csharp_namespace = "GrpcService1";

import "google/protobuf/timestamp.proto";

package post;


service Post {

    rpc CreatePost (PostRequestDTO) returns (PostResponseDTO);
    rpc DeletePost (DeletePostRequestDTO) returns (StatusResponse);
    rpc UpdatePost (PostRequestDTO) returns (StatusResponse);
    rpc GetPosts (GetPostRequestDTO) returns (PostsResponseDTO);
}


message PostRequestDTO {
    string Title = 1;
    string Description = 2;
}
message DeletePostRequestDTO {
    string id = 1;
}
message GetPostRequestDTO {
    string Query = 1;
    int32 Pagesize = 2;
    int32 Pagenum = 3;
}
message PostsResponseDTO {
    repeated PostResponseDTO response_dto = 1;
}
message PostResponseDTO {
    string Userid = 1;
    string Title = 2;
    string Description = 3;
    google.protobuf.Timestamp  Date  = 4;
}
message StatusResponse {
    bool succes = 1;
}
